WebKit cannot remove nested bold tags https://bugs.webkit.org/show_bug.cgi?id=30784

Patch by Ryosuke Niwa <rniwa@webkit.org> on 2009-10-27
Reviewed by Eric Seidel.

WebCore:

This patch modifies getPropertiesNotInComputedStyle so that it compares font-weight
more flexibly. Instead of comparing cssText, it uses fontWeightIsBold which converts
all font weights to either bold or unbold state.

* editing/ApplyStyleCommand.cpp:
(WebCore::fontWeightIsBold):
(WebCore::getPropertiesNotInComputedStyle): Removes font-weight property
if two style have the same value under getFontWeightValue

LayoutTests:

Adds two more edge cases to remove-nested-inline-styles.js:
<b><b><b>12</b></b></b> and <b><b><b>1</b></b>2</b>
WebKit now passes the one existing test used to fail.

* editing/style/remove-nested-inline-styles-expected.txt: Added two tests.
* editing/style/script-tests/remove-nested-inline-styles.js: Added two tests.



Canonical link: https://commits.webkit.org/41617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50172 268f45cc-cd09-0410-ab3c-d52691b4dbfc